force-app/main/default/objects/Account/fields/First_Gift_Amount_EDFaccount__c.field-meta.xml
<CustomField>
    <fullName>First_Gift_Amount_EDFaccount__c</fullName>
    <description>DLRS returning amount of first gift from any Contact in Account.</description>
    <inlineHelpText>The Close Amount of the first received Opportunity on this Account (Planned Gifts not included)</inlineHelpText>
    <label>First Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>