force-app/main/default/objects/Account/fields/First_Gift_Date_EDFaccount__c.field-meta.xml
<CustomField>
    <fullName>First_Gift_Date_EDFaccount__c</fullName>
    <description>Date of first gift, hard or soft credit excl. In-Kind and Planned.</description>
    <inlineHelpText>The Close Date of the first received Opportunity on this Account (Planned Gifts not included)</inlineHelpText>
    <label>First Gift Date</label>
    <type>Date</type>
</CustomField>