force-app/main/default/objects/Account/fields/First_Gift_Date_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>First_Gift_Date_Soft_Credit__c</fullName>
    <label>First Gift Date (Soft Credit)_delete</label>
    <type>Date</type>
</CustomField>