force-app/main/default/objects/Account/fields/Funding_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Funding_Cycle__c</fullName>
    <description>Heller created 2021</description>
    <label>Funding Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>