force-app/main/default/objects/Account/fields/Giving_History_Report__c.field-meta.xml
<CustomField>
    <fullName>Giving_History_Report__c</fullName>
    <description>Link to Dynamic Giving History Report.</description>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00O8W000007g7T1UAI/view?fv0=&quot; &amp; Id , &quot;Giving History Report&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to Dynamic Giving History Report.</inlineHelpText>
    <label>Giving History Report</label>
    <type>Text</type>
</CustomField>