force-app/main/default/objects/Account/fields/Highest_Previous_DL__c.field-meta.xml
<CustomField>
    <fullName>Highest_Previous_DL__c</fullName>
    <label>Highest Previous DL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zero Dollar</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Supporter</fullName>
            </value>
            <value>
                <fullName>Mid-Level</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>