force-app/main/default/objects/Account/fields/Host_Attitude__c.field-meta.xml
<CustomField>
    <fullName>Host_Attitude__c</fullName>
    <label>Host Attitude</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>