force-app/main/default/objects/Account/fields/Household_Income_Source__c.field-meta.xml
<CustomField>
    <fullName>Household_Income_Source__c</fullName>
    <label>Household Income Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Screening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>