force-app/main/default/objects/Account/fields/Household_Member_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Household_Member_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is populated by a Flow on Household Accounts when a Member of the Household is Deceased.</inlineHelpText>
    <label>Household Member Deceased</label>
    <type>Checkbox</type>
</CustomField>