force-app/main/default/objects/Account/fields/Inactive_Office__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive Office</label>
    <type>Checkbox</type>
</CustomField>