force-app/main/default/objects/Account/fields/LCRM_Address_Correction_Status__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Address_Correction_Status__c</fullName>
    <description>Heller created 2021</description>
    <label>LCRM Address Standardization Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>