force-app/main/default/objects/Account/fields/LCRM_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Last_Modified_By__c</fullName>
    <description>Heller created 2021</description>
    <label>LCRM Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>