force-app/main/default/objects/Account/fields/Less_Mail_account_edf__c.field-meta.xml
<CustomField>
    <fullName>Less_Mail_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Less Mail</label>
    <type>Checkbox</type>
</CustomField>