force-app/main/default/objects/Account/fields/Lifetime_Gift_Count_Acc__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Gift_Count_Acc__c</fullName>
    <description>This is a calculation of Number of Soft Credits and Total Number of Gifts for Contacts.</description>
    <inlineHelpText>The total count of all received Opportunities where the Account has a hard or soft credit. (Planned Gifts not included).</inlineHelpText>
    <label>Lifetime Gift Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>