force-app/main/default/objects/Account/fields/Matching_Gift_Web_Link__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Web_Link__c</fullName>
    <description>Link to matching gift portal or website.</description>
    <inlineHelpText>Enter link to matching gift portal or website.</inlineHelpText>
    <label>Matching Gift Web Link</label>
    <type>Url</type>
</CustomField>