force-app/main/default/objects/Account/fields/Membership_Leader_Account__c.field-meta.xml
<CustomField>
    <fullName>Membership_Leader_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Membership Constituent who has given a cumulative amount of $500 or more over the current or previous 3 fiscal years.</description>
    <inlineHelpText>Membership Constituent who has given a cumulative amount of $500 or more over the current or previous 3 fiscal years.</inlineHelpText>
    <label>Membership Leader</label>
    <type>Checkbox</type>
</CustomField>