force-app/main/default/objects/Account/fields/Minority_Serving_Institution__c.field-meta.xml
<CustomField>
    <fullName>Minority_Serving_Institution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minority Serving Institution (MSI)</label>
    <type>Checkbox</type>
</CustomField>