force-app/main/default/objects/Account/fields/MRC_Amount_Account__c.field-meta.xml
<CustomField>
    <fullName>MRC_Amount_Account__c</fullName>
    <description>EDF Most recent donation amount. Includes donations received as Pledge.</description>
    <inlineHelpText>The Close Amount of the most recently received Opportunity where the Account has a hard or soft credit (Planned Gifts not included).</inlineHelpText>
    <label>MRC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>