force-app/main/default/objects/Account/fields/MRC_Date_Account__c.field-meta.xml
<CustomField>
    <fullName>MRC_Date_Account__c</fullName>
    <description>EDF Most recent donation date. Includes donations and pledges. Also includes soft credits.</description>
    <inlineHelpText>The Close Date of the most recent received Opportunity where the Account has a hard or soft credit (Planned Gifts not included).</inlineHelpText>
    <label>MRC Date</label>
    <type>Date</type>
</CustomField>