force-app/main/default/objects/Account/fields/No_Exchange_account_edf__c.field-meta.xml
<CustomField>
    <fullName>No_Exchange_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not exchange name with other organizations</description>
    <inlineHelpText>Do not exchange name with other organizations</inlineHelpText>
    <label>No Exchange</label>
    <type>Checkbox</type>
</CustomField>