force-app/main/default/objects/Account/fields/No_Invitations_account_edf__c.field-meta.xml
<CustomField>
    <fullName>No_Invitations_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Constituent does not want to receive invitations</inlineHelpText>
    <label>No Invitations</label>
    <type>Checkbox</type>
</CustomField>