force-app/main/default/objects/Account/fields/No_mass_email_account_edf__c.field-meta.xml
<CustomField>
    <fullName>No_mass_email_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not send mass email to this constituent</description>
    <inlineHelpText>Do not send mass email to this constituent</inlineHelpText>
    <label>No mass email</label>
    <type>Checkbox</type>
</CustomField>