force-app/main/default/objects/Account/fields/No_Paper_Mail_account_edf__c.field-meta.xml
<CustomField>
    <fullName>No_Paper_Mail_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if donor does not want to receive paper mail</description>
    <inlineHelpText>Check if donor does not want to receive paper mail</inlineHelpText>
    <label>No Paper Mail</label>
    <type>Checkbox</type>
</CustomField>