force-app/main/default/objects/Account/fields/No_Phone_account_edf__c.field-meta.xml
<CustomField>
    <fullName>No_Phone_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not contact this constituent by phone</description>
    <inlineHelpText>Do not contact this constituent by phone</inlineHelpText>
    <label>No Phone</label>
    <type>Checkbox</type>
</CustomField>