force-app/main/default/objects/Account/fields/No_Renewal_This_Year_account_edf__c.field-meta.xml
<CustomField>
    <fullName>No_Renewal_This_Year_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if a renewal notice should not be sent for this year&apos;s renewal cycle</description>
    <inlineHelpText>Check if a renewal notice should not be sent for this year&apos;s renewal cycle</inlineHelpText>
    <label>No Renewal This Year</label>
    <type>Checkbox</type>
</CustomField>