force-app/main/default/objects/Account/fields/No_Renewals_account_edf__c.field-meta.xml
<CustomField>
    <fullName>No_Renewals_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if a renewal notice should never be sent.</description>
    <inlineHelpText>Check if a renewal notice should never be sent.</inlineHelpText>
    <label>No Renewals</label>
    <type>Checkbox</type>
</CustomField>