force-app/main/default/objects/Account/fields/No_Reports_account_edf__c.field-meta.xml
<CustomField>
    <fullName>No_Reports_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the donor does not want to receive reports</description>
    <inlineHelpText>Check if the donor does not want to receive reports</inlineHelpText>
    <label>No Reports</label>
    <type>Checkbox</type>
</CustomField>