force-app/main/default/objects/Account/fields/No_Solicitation_account_edf__c.field-meta.xml
<CustomField>
    <fullName>No_Solicitation_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the donor does not want to receive solicitations</description>
    <inlineHelpText>Check if the donor does not want to receive solicitations</inlineHelpText>
    <label>No Solicitation</label>
    <type>Checkbox</type>
</CustomField>