force-app/main/default/objects/Account/fields/No_Teleconference_account_edf__c.field-meta.xml
<CustomField>
    <fullName>No_Teleconference_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the donor does not want to participate in teleconferences</description>
    <inlineHelpText>Check if the donor does not want to participate in teleconferences</inlineHelpText>
    <label>No Teleconference</label>
    <type>Checkbox</type>
</CustomField>