force-app/main/default/objects/Account/fields/No_Upfront_Premiums_account_edf__c.field-meta.xml
<CustomField>
    <fullName>No_Upfront_Premiums_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the donor does not want to receive upfront premiums (ie. postcards, labele, etc.)</description>
    <inlineHelpText>Check if the donor does not want to receive upfront premiums (ie. postcards, labele, etc.)</inlineHelpText>
    <label>No Upfront Premiums</label>
    <type>Checkbox</type>
</CustomField>