force-app/main/default/objects/Account/fields/Number_of_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payments_Received__c</fullName>
    <description>Created as a part of Data Migration 2021.</description>
    <label>Number of Payments Received</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>