force-app/main/default/objects/Account/fields/Number_of_Planned_Gift__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Planned_Gift__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Number of Planned Gift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>