force-app/main/default/objects/Account/fields/of_Donations_Last_1_Years__c.field-meta.xml
<CustomField>
    <fullName>of_Donations_Last_1_Years__c</fullName>
    <description>Total hard and soft credits for all Contacts in HH last calendar year.</description>
    <inlineHelpText>Total hard and soft credits for all Contacts in HH last calendar year.</inlineHelpText>
    <label># of Donations during Last Year</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>