force-app/main/default/objects/Account/fields/of_Donations_Last_5_Years__c.field-meta.xml
<CustomField>
    <fullName>of_Donations_Last_5_Years__c</fullName>
    <description>Total number of donations (HC + SC) in past 5 calendar years made to C3/C4 excluding In-Kind and Planned Gift for all Contacts in HH.</description>
    <inlineHelpText>Count of donations in past 5 years (C3/C4, excl. In-Kind and Planned Gifts) for all Contacts in HH.</inlineHelpText>
    <label># of Donations Last 5 Years</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>