force-app/main/default/objects/Account/fields/of_Donations_this_FY_Account__c.field-meta.xml
<CustomField>
    <fullName>of_Donations_this_FY_Account__c</fullName>
    <description>Sum of number of Received/Received as Unconditional Pledge Opportunities (hard/soft credit) this FY for all Account Contacts: excl. in-kind/planned gifts.</description>
    <inlineHelpText>The total count of all received Opportunities where the Close Date is this FY and Account has a hard or soft credit. (Planned Gifts not included).</inlineHelpText>
    <label># of Donations this FY</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>