force-app/main/default/objects/Account/fields/One_per_year_account_edf__c.field-meta.xml
<CustomField>
    <fullName>One_per_year_account_edf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One per year</label>
    <type>Checkbox</type>
</CustomField>