force-app/main/default/objects/Account/fields/Organization_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Organization_Acronym__c</fullName>
    <label>Organization Acronym</label>
    <length>50</length>
    <type>Text</type>
</CustomField>