force-app/main/default/objects/Account/fields/Organization_Constituency__c.field-meta.xml
<CustomField>
    <fullName>Organization_Constituency__c</fullName>
    <label>Constituency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Constituency</valueSetName>
    </valueSet>
</CustomField>