force-app/main/default/objects/Account/fields/Organization_sub_constituency__c.field-meta.xml
<CustomField>
    <fullName>Organization_sub_constituency__c</fullName>
    <label>Sub-constituency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sub_Constituency</valueSetName>
    </valueSet>
</CustomField>