force-app/main/default/objects/Account/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A partner is an organization that EDF has cultivated a relationship with—a
partner might be an environmental ally, a validator, or a grantee.</description>
    <inlineHelpText>A partner is an organization that EDF has cultivated a relationship with—a
partner might be an environmental ally, a validator, or a grantee.</inlineHelpText>
    <label>Political Affairs Partner</label>
    <type>Checkbox</type>
</CustomField>